[package]
name = "toy_os"
version = "0.1.0"
authors = ["Kevin Clark <kevin.clark@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = "0.8"
volatile = "0.2"
spin = "0.5"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

